@@ -161,6 +161,7 @@ if (BUILD_SUPPORTED)
     DFHACK_PLUGIN(stocks stocks.cpp)
     DFHACK_PLUGIN(strangemood strangemood.cpp)
     DFHACK_PLUGIN(tiletypes tiletypes.cpp Brushes.h)
+    DFHACK_PLUGIN(title-version title-version.cpp)
     DFHACK_PLUGIN(trackstop trackstop.cpp)
 #    DFHACK_PLUGIN(treefarm treefarm.cpp)
     DFHACK_PLUGIN(tubefill tubefill.cpp)
